syntax = "proto3";
package v1;

import "google/protobuf/any.proto";

message ProtoconfValue {
    google.protobuf.Any value = 1;
}
